--- a/src/src/index.css
+++ b/src/src/index.css
@@ -1,55 +1,257 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-size: calc(7px + 0.6vw);
-  color: var(--on-background, #191c1a);
-  background-color: var(--background, #fbfdf9);
+@charset "UTF-8";
+@import url('https://rsms.me/inter/inter.css'); /*
+    Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
+    - The "symbol *" part is to solve Firefox SVG sprite bug
+ */
+*:where(
+    :not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)
+  ) {
+  all: unset;
+  display: revert;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+/* Reapply the pointer cursor */
+a,
+button {
+  cursor: pointer;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+}
+
+:root {
+  font-family: 'Inter', sans-serif;
+}
+
+@supports (font-variation-settings: normal) {
+  :root {
+    font-family: 'Inter var', sans-serif;
+  }
+}
+h1 {
+  font-size: 3rem;
+  font-weight: 700;
+  margin: 2rem 0;
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin: 1.5rem 0;
+}
+
+h3 {
+  font-size: 1.7rem;
+  font-weight: 600;
+  margin: 1rem 0;
+}
+
+h4 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin: 1rem 0;
+}
+
+h5 {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin: 1rem 0;
+}
+
+p,
+a,
+li {
+  font-size: 1.2rem;
+  letter-spacing: 0.02rem;
+}
+
+li {
+  margin-top: 0.7rem;
+  margin-bottom: 0.7rem;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  color: inherit;
+  font-weight: 600;
+  text-decoration: underline;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+li::marker {
+  color: inherit;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-  text-align: center;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+label,
+.label {
   font-size: 1em;
+  margin: 0.8em 0 0.4em 0;
+  display: block;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+}
+
+.form-inline {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+  margin: 1em 0;
+}
+.form-inline label,
+.form-inline .label {
+  margin: 0;
+}
+
+input:disabled,
+select:disabled {
+  opacity: 0.6;
+}
+
+input[type='text'],
+input[type='number'],
+select {
+  display: block;
+  width: 100%;
+  font-size: 1em;
+  line-height: 1.6em;
+  padding: 0.6em;
+  color: var(--on-surface-variant, #323334);
+  background-color: var(--surface-variant, #dee2e6);
+  background-repeat: no-repeat;
+  background-position: right 0.75rem center;
+  background-size: 16px 12px;
+  border-radius: 0.6em;
+}
+
+select {
+  text-wrap: nowrap;
+  padding-right: 3em;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23adb5bd' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+}
+
+select::before {
+  content: '⌃';
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='checkbox'] {
+  display: grid;
+  place-content: center;
+  font: inherit;
+  border-radius: 0.2em;
+  margin: 0;
+  padding: 0;
+  height: 1em;
+  aspect-ratio: 1;
+  outline: 0.1em solid currentColor;
+  outline-offset: -0.1em;
+}
+input[type='checkbox']::before {
+  content: '✓';
+  color: transparent;
+}
+input[type='checkbox']:checked {
+  appearance: none;
+  font: inherit;
+  margin: 0;
+  background-color: var(--primary, #0d6efd);
+  outline: none;
+}
+input[type='checkbox']:checked::before {
+  color: var(--on-primary, white);
+}
+input[type='checkbox']:not(:checked):disabled {
+  background-color: rgba(128, 128, 128, 0.329);
+}
+
+input[type='range'] {
+  display: inline-block;
+  width: 100%;
+  height: 1.5rem;
+  padding: 0;
+  margin: 0;
+  vertical-align: middle;
+}
+input[type='range']::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 0.5rem;
   cursor: pointer;
-  transition: border-color 0.25s;
+  background-color: var(--surface-variant, #dee2e6);
+  border-radius: 1rem;
 }
-button:hover {
-  border-color: #646cff;
+input[type='range']::-moz-range-track {
+  width: 100%;
+  height: 0.5rem;
+  cursor: pointer;
+  background-color: var(--surface-variant, #dee2e6);
+  border-radius: 1rem;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+input[type='range']::-webkit-slider-thumb {
+  appearance: none;
+  border: none;
+  cursor: pointer;
+  width: 1em;
+  height: 1em;
+  margin-top: -0.25rem;
+  background-color: var(--primary, #0d6efd);
+  border-radius: 1rem;
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
 }
+input[type='range']::-moz-range-thumb {
+  appearance: none;
+  border: none;
+  cursor: pointer;
+  width: 1em;
+  height: 1em;
+  margin-top: -0.25rem;
+  background-color: var(--primary, #0d6efd);
+  border-radius: 1rem;
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
+}
+
+input[type='color'] {
+  display: block;
+  height: 1.4em;
+  width: 2em;
+  aspect-ratio: 16/9;
+  border-radius: 0.3em;
+  border: none;
+  overflow: hidden;
+  padding: 0;
+}
+input[type='color']::-webkit-color-swatch-wrapper {
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  border: none;
+}
+input[type='color']::-webkit-color-swatch {
+  border-radius: 50%;
+  border: none;
+}
+input[type='color']::-moz-color-swatch {
+  border: none;
+}
+input[type='color']::-moz-focus-inner {
+  border: none;
+  padding: 0;
+  padding-inline: 0;
+}
+
+/*# sourceMappingURL=index.css.map */
